syntax = "proto3";

package service;

option go_package = "github.com/xryar/golang-grpc-ecommerce/pb/service";

import "common/base_response.proto";
import "buf/validate/validate.proto";

service HelloWorldService {
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
    string name = 1 [(buf.validate.field).string = { min_len:1, max_len: 255 }];
}

message HelloWorldResponse {
    common.BaseResponse base = 1;
    string message = 2;
}